Refactor employees and users model
