# internal/controller/employee.go
@@ -9,136 +9,136 @@ import (
 	"strconv"
 )
 
-// GetAllUsers
+// GetAllEmployees
 // @Summary Получение данных пользователей
 // @Description Получение данных всех пользователей
-// @Tags Users
+// @Tags Employees
 // @Produce json
 // @Security BearerAuth
-// @Success 200 {array} models.User
+// @Success 200 {array} models.Employee
 // @Failure 500 {object} CommonError
-// @Router /api/users [get]
-func (ctrl *Controller) GetAllUsers(c *gin.Context) {
+// @Router /api/employees [get]
+func (ctrl *Controller) GetAllEmployees(c *gin.Context) {
 
-	user, err := ctrl.service.GetAllUsers()
+	employee, err := ctrl.service.GetAllEmployees()
 	if err != nil {
 		ctrl.HandleError(c, err)
 		return
 	}
 
-	c.JSON(http.StatusOK, user)
+	c.JSON(http.StatusOK, employee)
 }
 
-type CreateUserRequest struct {
+type CreateEmployeeRequest struct {
 	Name  string `json:"name"`
 	Age   int    `json:"age"`
 	Email string `json:"email"`
 }
 
-// CreateUser
+// CreateEmployee
 // @Summary Добавление нового пользователя
 // @Description Добавление нового пользователя
-// @Tags Users
+// @Tags Employees
 // @Consume json
 // @Produce json
 // @Security BearerAuth
-// @Param request_body body CreateUserRequest true "информания о новом пользователе"
-// @Success 201 {array} models.User
+// @Param request_body body CreateEmployeeRequest true "информания о новом пользователе"
+// @Success 201 {array} models.Employee
 // @Failure 400 {object} CommonError
 // @Failure 422 {object} CommonError
 // @Failure 500 {object} CommonError
-// @Router /api/users [post]
-func (ctrl *Controller) CreateUser(c *gin.Context) {
-	var user models.User
-	if err := c.ShouldBindJSON(&user); err != nil {
+// @Router /api/employees [post]
+func (ctrl *Controller) CreateEmployee(c *gin.Context) {
+	var employee models.Employee
+	if err := c.ShouldBindJSON(&employee); err != nil {
 		ctrl.HandleError(c, errors.Join(errs.ErrInvalidRequestBody, err))
 		return
 	}
-	if user.Name == "" || user.Email == "" || user.Age < 0 {
+	if employee.Name == "" || employee.Email == "" || employee.Age < 0 {
 		ctrl.HandleError(c, errs.ErrInvalidFieldValuse)
 		return
 	}
-	if err := ctrl.service.CreateUser(user); err != nil {
+	if err := ctrl.service.CreateEmployee(employee); err != nil {
 		ctrl.HandleError(c, err)
 		return
 	}
-	c.JSON(http.StatusCreated, CommonResponse{Message: "User created successfully!"})
+	c.JSON(http.StatusCreated, CommonResponse{Message: "Employee created successfully!"})
 }
 
-// GetUserByID
+// GetEmployeeByID
 // @Summary Получение данных пользователя по ID
 // @Description Получение данных пользователя по ID
-// @Tags Users
+// @Tags Employees
 // @Produce json
 // @Security BearerAuth
 // @Param id path int true "id продукта"
-// @Success 200 {object} models.User
+// @Success 200 {object} models.Employee
 // @Failure 400 {object} CommonError
 // @Failure 404 {object} CommonError
 // @Failure 500 {object} CommonError
-// @Router /api/users/{id} [get]
-func (ctrl *Controller) GetUserByID(c *gin.Context) {
+// @Router /api/employees/{id} [get]
+func (ctrl *Controller) GetEmployeeByID(c *gin.Context) {
 	idStr := c.Param("id")
 	id, err := strconv.Atoi(idStr)
 	if err != nil || id < 1 {
 		ctrl.HandleError(c, errs.ErrInvalidUserID)
 		return
 	}
-	user, err := ctrl.service.GetUserByID(id)
+	employee, err := ctrl.service.GetEmployeeByID(id)
 	if err != nil {
 		ctrl.HandleError(c, err)
 		return
 	}
-	c.JSON(http.StatusOK, user)
+	c.JSON(http.StatusOK, employee)
 }
 
-// UpdateUserByID
+// UpdateEmployeeByID
 // @Summary Обновление данных пользователя по ID
 // @Description Обновление данных пользователя по ID
-// @Tags Users
+// @Tags Employees
 // @Consume json
 // @Produce json
 // @Security BearerAuth
 // @Param id path int true "id продукта"
-// @Param request_body body CreateUserRequest true "информация о пользователе"
+// @Param request_body body CreateEmployeeRequest true "информация о пользователе"
 // @Success 200 {object} CommonResponse
 // @Failure 400 {object} CommonError
 // @Failure 404 {object} CommonError
 // @Failure 422 {object} CommonError
 // @Failure 500 {object} CommonError
-// @Router /api/users/{id} [put]
-func (ctrl *Controller) UpdateUserByID(c *gin.Context) {
+// @Router /api/employees/{id} [put]
+func (ctrl *Controller) UpdateEmployeeByID(c *gin.Context) {
 	idStr := c.Param("id")
 	id, err := strconv.Atoi(idStr)
 	if err != nil || id < 1 {
 		ctrl.HandleError(c, errs.ErrInvalidUserID)
 		return
 	}
-	var user models.User
-	if err = c.ShouldBindJSON(&user); err != nil {
+	var employee models.Employee
+	if err = c.ShouldBindJSON(&employee); err != nil {
 		ctrl.HandleError(c, errors.Join(errs.ErrInvalidRequestBody, err))
 		return
 	}
 
-	if user.Name == "" || user.Email == "" || user.Age < 0 {
+	if employee.Name == "" || employee.Email == "" || employee.Age < 0 {
 		ctrl.HandleError(c, errs.ErrInvalidFieldValuse)
 		return
 	}
-	user.ID = id
+	employee.ID = id
 
-	if err = ctrl.service.UpdateUserByID(user); err != nil {
+	if err = ctrl.service.UpdateEmployeeByID(employee); err != nil {
 		ctrl.HandleError(c, err)
 		return
 	}
 	c.JSON(http.StatusOK, gin.H{
-		"message": "User updated successfully!",
+		"message": "Employee updated successfully!",
 	})
 }
 
-// DeleteUserByID
+// DeleteEmployeeByID
 // @Summary Удаление данных пользователя по ID
 // @Description Удаление данных пользователя по ID
-// @Tags Users
+// @Tags Employees
 // @Produce json
 // @Security BearerAuth
 // @Param id path int true "id продукта"
@@ -146,17 +146,17 @@ func (ctrl *Controller) UpdateUserByID(c *gin.Context) {
 // @Failure 400 {object} CommonError
 // @Failure 404 {object} CommonError
 // @Failure 500 {object} CommonError
-// @Router /api/users/{id} [delete]
-func (ctrl *Controller) DeleteUserByID(c *gin.Context) {
+// @Router /api/employees/{id} [delete]
+func (ctrl *Controller) DeleteEmployeeByID(c *gin.Context) {
 	idStr := c.Param("id")
 	id, err := strconv.Atoi(idStr)
 	if err != nil || id < 1 {
 		ctrl.HandleError(c, errs.ErrInvalidUserID)
 		return
 	}
-	if err = ctrl.service.DeleteUserByID(id); err != nil {
+	if err = ctrl.service.DeleteEmployeeByID(id); err != nil {
 		ctrl.HandleError(c, err)
 		return
 	}
-	c.JSON(http.StatusOK, CommonResponse{Message: "User deleted successfully!"})
+	c.JSON(http.StatusOK, CommonResponse{Message: "Employee deleted successfully!"})
 }
